--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-hello world
+!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>charliecqc.me</title>
+</head>
+<body>
+ 
+<h1>Hello world</h1>
+ 
+<p>welcome to my world</p>
+ 
+</body>
+</html>
