--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
  
 <p>welcome to my world</p>
 <p>welocome to the jungle</p>
+<p>
+	<label> Select a data and a time:
+	<input tupe = "datetime" />
+	</label>
+</p>
  
 </body>
 </html>
