add faacebook and twitter intergration

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 <title>charliecqc.me</title>
+<meta property="og:title" content=""/>
+<meta property="og:image" content=""/>
+<meta property="og:url" content=""/>
+<meta property="og:site_namee" content=""/>
+<meta property="og:discription" content=""/>
+
 </head>
 <body>
  
@@ -9,11 +15,6 @@
  
 <p>welcome to my world</p>
 <p>welocome to the jungle</p>
-<p>
-	<label> Select a data and a time:
-	<input tupe = "datetime" />
-	</label>
-</p>
  
 </body>
 </html>
