--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 <p>OS I/O Path Optimizations for Flash Solid-state Drivers, Woong Shin,Qichen Chen, Myoungwon Oh, Hyeonsang Eom, Heon Y. Yeom; USENIX ATC  2014</p> 
 <h3>International Journal</h3>
 <p>Design and evaluation of mobile offloading system for web-centric devices, Sehoon Park, Qichen Chen, Hyuck Han, Heon Y.Yeom, Journal of Netwrork and COmputer Applications, Volume 40, April 2014, Pages 105-115</p>
+
 <br>
-<h3>如何在MAC上搭建编程环境</h3>
+<h3>XDR 理解与编程实例</h3>
+<a href = "XDR.html">XDR Progrmaing Example</a>
 </body>
 </html>
