add recent publications

--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
 
 <h2>Publications</h2>
 <h3>International Conferenece</h3>
-<p>Some:Selective offloadig for a mobile computing environment, S Park, Y Choi, Qichen Chen, Heon Y. Yeom; Cluster Computing 2012</p> 
-<p>PIOS: Aplatform-independent offloading system for a mobile web environment, S Park,Qichen Chen, Heon Y. Yeom; Consumer Communications and Networking Conference 2013</p> 
+<p>FlexGPU: A Flexible and Efficient Scheduler for GPU Sharing Systems. Qichen Chen, Hyojeong Lee, Heon Y.Yeom, Yongseok Son. 20th IEEE/ACM International Symposium on CLuster, Cloud, and Grid Computing(CCgrid'20),2020.</p>
+<p> An Efficient Garbage Collection in Java Virtual Machine via Swap I/O Optimization. Hyojeong Lee, Qichen Chen, Heon Y.Yeom,Yongseok Son. 35th ACM/SIGAPP Symposium On Applied Computing(SAC2020),2020</p>
+<p>Design of Skiplist Based Key-Value Store on Non-Volatile Memory, Qichen Chen, Heon Y.Yeom; 2018 IEEE 3rd International Workshops on Foundations and Applications of Self* Systems (FAS*W)</p>
 <p>OS I/O Path Optimizations for Flash Solid-state Drivers, Woong Shin,Qichen Chen, Myoungwon Oh, Hyeonsang Eom, Heon Y. Yeom; USENIX ATC  2014</p> 
+<p>Some:Selective offloadig for a mobile computing environment, S Park, Y Choi, Qichen Chen, Heon Y. Yeom; Cluster Computing(cluster) 2012</p> 
+<p>PIOS: Aplatform-independent offloading system for a mobile web environment, S Park,Qichen Chen, Heon Y. Yeom; Consumer Communications and Networking Conference 2013</p> 
 <h3>International Journal</h3>
-<p>Design and evaluation of mobile offloading system for web-centric devices, Sehoon Park, Qichen Chen, Hyuck Han, Heon Y.Yeom, Journal of Netwrork and COmputer Applications, Volume 40, April 2014, Pages 105-115</p>
+<p>Design and Implementation of Skiplist-based Key-Value Store on Non-volatile Memory. Qichen Chen, Hyojeong Lee, Yunhee Kim, Heon Y.Yeom, Yongseok Son. Cluster computing, vol.22.iss.2,pp.361-371,2019</p>
+<p>Design of an adaptive GPU sharing and scheduling scheme in container-based cluster. Qichen Chen, Jisun Oh, Seoyoung Kim, Yunhee Kim. Cluster computing, 2019</p>
+<p>Design and evaluation of mobile offloading system for web-centric devices, Sehoon Park, Qichen Chen, Hyuck Han, Heon Y.Yeom, Journal of Netwrork and Computer Applications, Volume 40, April 2014, Pages 105-115</p>
 
 <br>
 <h3>XDR 理解与编程实例</h3>
