--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <h2>Publications</h2>
 <h3>International Conferenece</h3>
-<p>FlexGPU: A Flexible and Efficient Scheduler for GPU Sharing Systems. Qichen Chen, Hyojeong Lee, Heon Y.Yeom, Yongseok Son. 20th IEEE/ACM International Symposium on CLuster, Cloud, and Grid Computing(CCgrid'20),2020.</p>
+<p>FlexGPU: A Flexible and Efficient Scheduler for GPU Sharing Systems. Qichen Chen, Hyojeong Lee, Heon Y.Yeom, Yongseok Son. 20th IEEE/ACM International Symposium on CLuster, Cloud, and Grid Computing(CCgrid'20) 2020.</p>
 <p> An Efficient Garbage Collection in Java Virtual Machine via Swap I/O Optimization. Hyojeong Lee, Qichen Chen, Heon Y.Yeom,Yongseok Son. 35th ACM/SIGAPP Symposium On Applied Computing(SAC2020),2020</p>
-<p>Design of Skiplist Based Key-Value Store on Non-Volatile Memory, Qichen Chen, Heon Y.Yeom; 2018 IEEE 3rd International Workshops on Foundations and Applications of Self* Systems (FAS*W)</p>
+<p>Design of Skiplist Based Key-Value Store on Non-Volatile Memory. Qichen Chen, Heon Y.Yeom; 2018 IEEE 3rd International Workshops on Foundations and Applications of Self* Systems (FAS*W)</p>
 <p>SAGP: A Design of Swap Aware JVM GC Policy. Qichen Chen. ACM Middleware 2018 Doctoral Symposium.</p>
 <p>OS I/O Path Optimizations for Flash Solid-state Drivers, Woong Shin,Qichen Chen, Myoungwon Oh, Hyeonsang Eom, Heon Y. Yeom; USENIX ATC  2014</p> 
 <p>Some:Selective offloadig for a mobile computing environment, S Park, Y Choi, Qichen Chen, Heon Y. Yeom; Cluster Computing(cluster) 2012</p> 
