--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <h2>Publications</h2>
 <h3>International Conference</h3>
+<p>smCompactor: A workload-aware Fine-grained Resource Management Framewrok for GPGPUs. Qichen Chen, Hyerin Chung, Yongseok Son, Yoonhee Kim, Heon Y.Yeom. The 36th ACM/SIGAPP Symposium On Applied Computing (SAC'21) 2021</p>
 <p>FlexGPU: A Flexible and Efficient Scheduler for GPU Sharing Systems. Qichen Chen, Hyojeong Lee, Heon Y.Yeom, Yongseok Son. 20th IEEE/ACM International Symposium on CLuster, Cloud, and Grid Computing(CCgrid'20) 2020.</p>
 <p> An Efficient Garbage Collection in Java Virtual Machine via Swap I/O Optimization. Hyojeong Lee, Qichen Chen, Heon Y.Yeom,Yongseok Son. 35th ACM/SIGAPP Symposium On Applied Computing(SAC2020),2020</p>
 <p>Design of Skiplist Based Key-Value Store on Non-Volatile Memory. Qichen Chen, Heon Y.Yeom. 2018 IEEE 3rd International Workshops on Foundations and Applications of Self* Systems (FAS*W)</p>
